src/components/carousel/style.module.scss
@import 'src/theme/colors.module.scss';
@import 'src/theme/dimensions.module.scss';

.container {
  display: flex;
  flex-direction: column;
  min-width: 320px;
}

.closeContainer {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 10px;
}

.button {
  border: none;
  cursor: pointer;
  background-color: white;
  color: $default-copy-color;
  font-weight: bold;

  &:focus {
    outline: none;
    color: $highlight-color;
  }

  &:hover {
    color: $highlight-color;
  }
}

.prev {
  margin-right: 20px;
}

.next {
  margin-left: 20px;
}

.imageContainer {
  display: block;
  position: relative;
  cursor: pointer;
  width: 100%;
  // subtract amount of pixels larger than header+footer
  height: calc(100vh - 378px);
}

.navContainer {
  display: flex;
  justify-content: center;
  margin-top: 10px;
  color: $default-copy-color;
}

.disappear {
  display: flex;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: opacity $transition-speed ease;
  z-index: 0;
}

.appear {
  display: flex;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 1;
  transition: opacity $transition-speed ease;
  z-index: 1;
}

.carousel {
  display: block;
  margin: auto;
  max-width: 100%;
  max-height: 100%;
}

